@@ -138,6 +138,7 @@ unsigned name2addr(SOCKADDR_UNION *addr, char *name, int passive) {
     if(retval)
         addrlist2addr(addr, addr_list);
     str_free(addr_list->addr);
+    str_free(addr_list->fd);
     str_free(addr_list->session);
     str_free(addr_list);
     return retval;
@@ -154,6 +155,7 @@ unsigned hostport2addr(SOCKADDR_UNION *addr,
     if(num)
         addrlist2addr(addr, addr_list);
     str_free(addr_list->addr);
+    str_free(addr_list->fd);
     str_free(addr_list->session);
     str_free(addr_list);
     return num;
@@ -196,6 +198,9 @@ unsigned name2addrlist(SOCKADDR_LIST *addr_list, char *name) {
             (addr_list->num+1)*sizeof(SOCKADDR_UNION));
         addr_list->addr[addr_list->num].un.sun_family=AF_UNIX;
         strcpy(addr_list->addr[addr_list->num].un.sun_path, name);
+        addr_list->fd=str_realloc(addr_list->fd,
+            (addr_list->num+1)*sizeof(SOCKET));
+        addr_list->fd[addr_list->num]=INVALID_SOCKET;
         addr_list->session=str_realloc(addr_list->session,
             (addr_list->num+1)*sizeof(SSL_SESSION *));
         addr_list->session[addr_list->num]=NULL;
@@ -291,6 +296,9 @@ unsigned hostport2addrlist(SOCKADDR_LIST *addr_list,
             (addr_list->num+1)*sizeof(SOCKADDR_UNION));
         memcpy(&addr_list->addr[addr_list->num], cur->ai_addr,
             (size_t)cur->ai_addrlen);
+        addr_list->fd=str_realloc(addr_list->fd,
+            (addr_list->num+1)*sizeof(SOCKET));
+        addr_list->fd[addr_list->num]=INVALID_SOCKET;
         addr_list->session=str_realloc(addr_list->session,
             (addr_list->num+1)*sizeof(SSL_SESSION *));
         addr_list->session[addr_list->num]=NULL;
@@ -312,6 +320,7 @@ void addrlist_clear(SOCKADDR_LIST *addr_list, int passive) {
 NOEXPORT void addrlist_reset(SOCKADDR_LIST *addr_list) {
     addr_list->num=0;
     addr_list->addr=NULL;
+    addr_list->fd=NULL;
     addr_list->session=NULL;
     addr_list->rr=0; /* reset the round-robin counter */
     addr_list->parent=addr_list; /* allow a copy to locate its parent */
@@ -325,7 +334,8 @@ unsigned addrlist_dup(SOCKADDR_LIST *dst, const SOCKADDR_LIST *src) {
     } else { /* delayed resolver */
         addrlist_resolve(dst);
     }
-    /* we currently don't make a local copy of src->session */
+    /* a client does not have its own local copy of
+       src->session and src->fd */
     return dst->num;
 }
 
