@@ -55,7 +55,7 @@ int ssl_init(void) { /* init TLS before parsing configuration file */
     OPENSSL_init_ssl(OPENSSL_INIT_LOAD_SSL_STRINGS |
         OPENSSL_INIT_LOAD_CRYPTO_STRINGS | OPENSSL_INIT_LOAD_CONFIG, NULL);
 #else
-    OPENSSL_config( NULL );
+    OPENSSL_config(NULL);
     SSL_load_error_strings();
     SSL_library_init();
 #endif
